--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,67 +2,97 @@
 @import "./variables";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-
 html {
-    box-sizing: border-box;
-    background: #FF5A00;
-  }
-  
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  body {
-    color: $white;
-    background: #FF5A00;
-    font-family: Roboto;
-    font-weight: 500;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 16px;
-    }
-  
-    .user {
+  box-sizing: border-box;
+  background: #ff5a00;
+}
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
-
-    }
-
-    .submit {
-        background: #ffffff;
-        border-radius: 4px;
-        font-size: 18px;
-        padding: 12px;
-        border: none;
-        color: black;
-        min-width: 216px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        margin: 48px 0 26px;
-      }
-  
-  .counter {
+body {
+  color: #ffffff;
+  background: #ff5a00;
+  font-family: Roboto;
+  font-weight: 500;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 16px;
+}
+
+.counter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  font-size: 36px;
+  padding: 30px;
+  /*&__value { display: block; padding-top: 64px; };;; */
+  /*&__value {
+  display: block;
+  padding-top: 64px;
+}*/
+}
+
+.form {
+  display: flex;
+  flex-flow: column;
+  background: #3a4e58;
+  padding: 25px;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+  border-radius: 4px;
+}
+
+.heading {
+  font-size: 54px;
+  margin: 0 auto;
+  padding: 15px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.repo-list {
+  color: #ffffff;
+  font-size: 18px;
+  align-items: flex-start;
+  padding-inline-start: 0px;
+  list-style-type: none;
+  & li {
+    text-align: left;
+  }
+}
+
+.submit {
+  background: #ffffff;
+  font-size: 18px;
+  border: none;
   color: black;
-  font-size: 112px;
-  padding: 50px
-  &__value {
-    display: block;
-    padding-top: 64px;
+  box-shadow: inset 0px 1px 1px rgb(0 0 0 / 30%);
+  border-radius: 4px;
+  padding: 10px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.user {
+  &__name {
+    background: #ffffff;
+    font-size: 18px;
+    border: none;
+    box-shadow: inset 0px 1px 1px rgb(0 0 0 / 30%);
+    border-radius: 4px;
+    padding: 10px 25px;
+    text-align: center;
+    margin: 20px auto;
   }
-  }
-  
-  .heading {
-    font-size: 55px;
-    margin: 0 0 64px 0;
-    padding: 0;
-  }
-  
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+}
