--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,18 +4,16 @@
 
 html {
   box-sizing: border-box;
-  background: #ff5a00;
+  background: #FF5A00;    
 }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
   box-sizing: inherit;
 }
 
 body {
   color: #ffffff;
-  background: #ff5a00;
+  background: #FF5A00;
   font-family: Roboto;
   font-weight: 500;
   min-height: 100vh;
@@ -23,9 +21,10 @@ body {
   align-items: center;
   justify-content: center;
   padding: 16px;
-}
+  }
 
-.counter {
+
+.container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,11 +32,8 @@ body {
   color: white;
   font-size: 36px;
   padding: 30px;
-  /*&__value { display: block; padding-top: 64px; };;; */
-  /*&__value {
-  display: block;
-  padding-top: 64px;
-}*/
+  gap: 8px;
+  max-width: 320px;
 }
 
 .form {
@@ -73,19 +69,26 @@ body {
 }
 
 .submit {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  display: flex;
   background: #ffffff;
   font-size: 18px;
   border: none;
-  color: black;
+  background-color: #3A4E58;
+  color: white;
   box-shadow: inset 0px 1px 1px rgb(0 0 0 / 30%);
   border-radius: 4px;
-  padding: 10px;
+  padding: 6px 12px;
   text-align: center;
   margin: 0 auto;
 }
 
 .user {
-  &__name {
+
+  &name {
     background: #ffffff;
     font-size: 18px;
     border: none;
@@ -94,5 +97,6 @@ body {
     padding: 10px 25px;
     text-align: center;
     margin: 20px auto;
+    width: 100%;
   }
 }
