--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,10 +4,12 @@
 
 html {
   box-sizing: border-box;
-  background: #FF5A00;    
+  background: #FF5A00;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -21,7 +23,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 16px;
-  }
+}
 
 
 .container {
@@ -57,12 +59,17 @@ body {
   align-items: center;
 }
 
+.myForm {
+  max-width: 100%;
+  word-wrap: break-word;
+}
+
 .myLabel {
   align-items: center;
-    display: flex;
-    flex-direction: column;
-    font-weight: 500;
-    font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+  font-size: 24px;
 }
 
 .repo-list {
@@ -71,6 +78,7 @@ body {
   align-items: flex-start;
   padding-inline-start: 0px;
   list-style-type: none;
+
   & li {
     text-align: left;
   }
@@ -95,14 +103,13 @@ body {
 }
 
 .username {
-    background: #ffffff;
-    font-size: 18px;
-    border: none;
-    box-shadow: inset 0px 1px 1px rgb(0 0 0 / 30%);
-    border-radius: 4px;
-    padding: 10px 25px;
-    text-align: center;
-    margin: 20px auto;
-    width: 100%;
-  }
-
+  background: #ffffff;
+  font-size: 18px;
+  border: none;
+  box-shadow: inset 0px 1px 1px rgb(0 0 0 / 30%);
+  border-radius: 4px;
+  padding: 10px 25px;
+  text-align: center;
+  margin: 20px auto;
+  max-width: 100%;
+}
